adapt class with application.properties