@@ -17,30 +17,60 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.security.SecureRandom;
+import java.util.Arrays;
+import java.util.Properties;
+import java.util.stream.Collectors;
 
 public class GenerateImage {
 
     private static final Logger LOG = LoggerFactory.getLogger(GenerateImage.class);
+    private static Properties props = new Properties();
 
     private static ScriptEngineManager manager = new ScriptEngineManager();
     private static String path;
+    private static String jsPath;
     private static String name;
+    private static String rawdeflate;
+    private static String plantumlJs;
+    private static String urlJs;
+    private static String urlApi;
+    private static String url;
+    private static String format;
+
+
+    private static void loadFromPropeties(){
+        try(InputStream configStream =GenerateImage.class.getResourceAsStream( "/application.properties")){
+            props.load(configStream);
+        }catch (IOException e) {
+            e.printStackTrace();
+        }
+
+    }
 
     private static void inicialized(){
-        path="src/main/resources/images/";
-        name="image";
+        loadFromPropeties();
+        path=props.getProperty("img.folder");
+        jsPath=props.getProperty("js.folder");
+        name=props.getProperty("img.name.default");
+        rawdeflate=props.getProperty("rawdeflate.file");
+        plantumlJs=props.getProperty("plantuml.file");
+        urlJs=props.getProperty("plantuml.url.js");
+        urlApi=props.getProperty("plantuml.url.api");
+        url=props.getProperty("plantuml.url");
+        format=props.getProperty("plantuml.url.format.image");
     }
     private static void downloadFilesToEncode() throws IOException {
-        try (InputStream in = new URL("https://www.planttext.com/js/rawdeflate.min.js").openStream()) {
-            Files.deleteIfExists(Path.of("src/main/resources/js/rawdeflate.min.js").toAbsolutePath());
-            Files.copy(in, Paths.get("src/main/resources/js/rawdeflate.min.js").toAbsolutePath());
+
+        try (InputStream in = new URL(createPath(url,urlJs,rawdeflate)).openStream()) {
+            Files.deleteIfExists(Path.of(createPath(jsPath,rawdeflate)).toAbsolutePath());
+            Files.copy(in, Paths.get(createPath(jsPath,rawdeflate)).toAbsolutePath());
         } catch (MalformedURLException | FileNotFoundException e) {
             LOG.debug("context",e);
         }
 
-        try (InputStream in = new URL("https://www.planttext.com/js/plantuml.min.js").openStream()) {
-            Files.deleteIfExists(Path.of("src/main/resources/js/plantuml.min.js.js").toAbsolutePath());
-            Files.copy(in, Paths.get("src/main/resources/js/plantuml.min.js.js").toAbsolutePath());
+        try (InputStream in = new URL(createPath(url, urlJs,plantumlJs)).openStream()) {
+            Files.deleteIfExists(Path.of(createPath(jsPath,plantumlJs)).toAbsolutePath());
+            Files.copy(in, Paths.get(createPath(jsPath,plantumlJs)).toAbsolutePath());
         } catch (MalformedURLException | FileNotFoundException e) {
             LOG.debug("context", e);
         }
@@ -48,7 +78,7 @@ public class GenerateImage {
 
     private static String deflate(String classDiagram) throws IOException, ScriptException, NoSuchMethodException {
         ScriptEngine engine = manager.getEngineByName("JavaScript");
-        engine.eval(Files.newBufferedReader(Paths.get("src/main/resources/js/rawdeflate.min.js").toAbsolutePath(), StandardCharsets.UTF_8));
+        engine.eval(Files.newBufferedReader(Paths.get(createPath(jsPath,rawdeflate)).toAbsolutePath(), StandardCharsets.UTF_8));
 
         Invocable inv = (Invocable) engine;
         return (String) inv.invokeFunction("deflate", classDiagram);
@@ -57,7 +87,7 @@ public class GenerateImage {
 
     private static String encode64(String classDiagram) throws IOException, ScriptException, NoSuchMethodException {
         ScriptEngine engine = manager.getEngineByName("JavaScript");
-        engine.eval(Files.newBufferedReader(Paths.get("src/main/resources/js/plantuml.min.js.js").toAbsolutePath(), StandardCharsets.UTF_8));
+        engine.eval(Files.newBufferedReader(Paths.get(createPath(jsPath,plantumlJs)).toAbsolutePath(), StandardCharsets.UTF_8));
 
         Invocable inv = (Invocable) engine;
         return (String) inv.invokeFunction("encode64", classDiagram);
@@ -71,13 +101,13 @@ public class GenerateImage {
         return downloadImage(classDiagramEncode, name, null);
     }
 
-    public static String downloadImage(String classDiagramEncode, String name, String pathUser) throws NoSuchMethodException, ScriptException, IOException {
+    public static String downloadImage(String classDiagramEncode, String nameUser, String pathUser) throws NoSuchMethodException, ScriptException, IOException {
         inicialized();
         downloadFilesToEncode();
         checkAndCreatePath(pathUser);
-        checkName(name);
+        checkName(nameUser);
         String encodingClassDiagram = encode64(deflate(classDiagramEncode));
-        try (InputStream in = new URL("https://www.planttext.com/api/plantuml/svg/" + encodingClassDiagram).openStream()) {
+        try (InputStream in = new URL(createPath(url,urlApi,format,"/") + encodingClassDiagram).openStream()) {
             Files.copy(in, Paths.get(path + name));
         } catch (MalformedURLException e) {
             LOG.debug("context",e);
@@ -104,8 +134,12 @@ public class GenerateImage {
 
     private static String generateRandomName() {
         int number = new SecureRandom().nextInt();
-        while (Files.exists(Paths.get("resources/input/images/image" + number + ".svg").toAbsolutePath()))
+        while (Files.exists(Paths.get(createPath(path, name) + number + "." + format).toAbsolutePath()))
             number = new SecureRandom().nextInt();
-        return "image" + number + ".jpg";
+        return name + number + "." + format;
+    }
+
+    private static String createPath(String... args){
+        return Arrays.stream(args).collect(Collectors.joining());
     }
 }
